--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <form class="form-signup" id="contactForm" data-sb-form-api-token="API_TOKEN">
                             <!-- Email address input-->
                             <div class="row input-group-newsletter">
-                                <div class="col"><input class="form-control" id="emailAddress" type="email" placeholder="Seu email aqui..." aria-label="Seu email aqui" data-sb-validations="required,email" /></div>
+                                <div class="col"><input class="form-control" id="emailAddress" type="email" placeholder="Email" aria-label="Email" data-sb-validations="required,email" /></div>
                                 <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Me notifique!</button></div>
                             </div>
                         <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">Email é obrigatório.</div>
