--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#about">Sobre</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Podcasts</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Contato</a></li>
                     </ul>
@@ -40,17 +39,11 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Podcasts de Horror</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Nosso site visa colocar você, fã de horror, em contato com os melhores podcast de forma fácil.</h2>
-                        <a class="btn btn-primary" href="#about">Explore</a>
+                        <a class="btn btn-primary" href="#projects">Explore</a>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- About-->
-        <section class="about-section text-center" id="about">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8">
-        </section>
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container px-4 px-lg-5">
